# multigain

./: .gitignore  CMakeLists.txt  Jamroot  README  autogen.sh  configure.ac  configure.in
include/: Makefile.am
include/multigain/: decode.hpp  errors.hpp  gain_analysis.h  gain_analysis.hpp  tag_locate.hpp
src/: .gitignore  CMakeLists.txt  Jamfile  Makefile.am  decode.cpp  errors.cpp  gain_analysis.c  gaintool.cpp  lame.cpp  lame.hpp  multigain.cpp  tag_locate.cpp
src/extra/: wavdec.cpp
